--- a/reference/s2s-rng-api.v1.0.yaml
+++ b/reference/s2s-rng-api.v1.0.yaml
@@ -23,6 +23,7 @@ paths:
                   clientTransaction-id:
                     type: string
                     description: Client's unique ID for this transaction
+                    pattern: '^[A-Za-z0-9 -]+'
                   transactionStatus:
                     $ref: '#/components/schemas/Status'
                   serverId:
@@ -55,6 +56,8 @@ paths:
                         clientRequestId:
                           type: string
                           description: Client's unique identifier for this draw request
+                          pattern: '^[A-Za-z0-9 -]+'
+                          example: RQID-31234545-32
                         drawStatus:
                           $ref: '#/components/schemas/Status'
                         productId:
@@ -65,6 +68,11 @@ paths:
                           $ref: '#/components/schemas/DrawMatrix'
                         distribution:
                           $ref: '#/components/schemas/Distribution'
+                        drawTime:
+                          type: string
+                          format: date-time
+                          description: Timestamp of the draw
+                          example: '2020-09-30T18:30:23Z'
                         recordId:
                           type: string
                           description: Unique record identifier for the draw
@@ -106,6 +114,7 @@ paths:
                           minValue: 1
                           maxValue: 49
                           withReplacement: true
+                        drawTime: '2020-09-30T18:30:23Z'
                         recordId: EX191109870000000125
                         recordHandle: -1
                         sets:
@@ -138,6 +147,7 @@ paths:
                           minValue: 1
                           maxValue: 39
                           withReplacement: true
+                        drawTime: '2020-09-30T18:30:23Z'
                         recordId: EX191109870000000125
                         recordHandle: 43543
                         sets:
@@ -158,7 +168,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-      description: Create draws for regular draw games
+              examples:
+                Example:
+                  value:
+                    status:
+                      code: 999
+                      description: Input validation failed
+                    fieldErrors:
+                      - code: INVALID_VALUE
+                        message: Product not found
+                        fieldName: productId
+                        path: 'drawRequests[1].productId'
+      description: Create draws for regular draw products
       requestBody:
         content:
           application/json:
@@ -168,6 +189,9 @@ paths:
                 clientTransactionId:
                   type: string
                   description: Client's unique ID for this transaction
+                  format: int64
+                  example: TXID-102030450-11
+                  pattern: '^[A-Za-z0-9 -]+'
                 clientBusinessDay:
                   type: integer
                   description: Client's current business day. Format is YYMMDD.
@@ -190,13 +214,18 @@ paths:
                       clientRequestId:
                         type: string
                         description: Client's unique identifier for this draw request
-                      clientString:
+                        pattern: '^[A-Za-z0-9 -]+'
+                        example: RQID-31234545-32
+                      drawText:
                         type: string
-                        description: A text string that will be printed in the draw reports and also appended to the draw report file names
+                        description: An extra text string that will appear in the draw reports and is also appended to the draw report file names
                         example: PROMO-1
+                        pattern: '^[a-zA-Z0-9 -_]+'
                       drawHash:
                         type: string
                         description: 'A hash string that will be included in the signed data, such as the SHA-1 hash of the bets'
+                        pattern: '^[a-fA-F0-9]+'
+                        format: binary
                       drawNumber:
                         type: integer
                         description: Number to assign to this draw. Shown in draw reports and file names
@@ -229,7 +258,7 @@ paths:
                       numberOfSets: 1
               Example:
                 value:
-                  clientTransactionId: ID-102030450-11
+                  clientTransactionId: TXID-102030450-11
                   clientBusinessDay: 200930
                   testMode: true
                   drawUsers:
@@ -238,7 +267,242 @@ paths:
                     - name: John Smith
                       loginTime: '2020-09-30T15:56:01Z'
                   drawRequests:
-                    - clientRequestId: DRAW-31234545-32
+                    - clientRequestId: RQID-31234545-32
+                      drawText: PROMO-1
+                      drawHash: 9498A934974997B9723498A93D92498397BC70B
+                      productId: 1006
+                      numberOfSets: 2
+                      drawMatrix:
+                        setSize: 5
+                        minValue: 1
+                        maxValue: 39
+                        withReplacement: true
+                      extractData:
+                        extractType: TYPE1
+                        extractFields:
+                          - '1234'
+                          - ''
+                          - '23485'
+                          - ''
+                          - ''
+                          - 'true'
+                          - '30.00'
+        description: ''
+      parameters: []
+  /draws/quick-picks:
+    post:
+      summary: ''
+      operationId: post-draws-quick-picks
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  clientTransaction-id:
+                    type: string
+                    description: Client's unique ID for this transaction
+                    pattern: '^[A-Za-z0-9 -]+'
+                  transactionStatus:
+                    $ref: '#/components/schemas/Status'
+                  serverId:
+                    type: string
+                    example: RNG-TEST-87
+                    description: RNG server identifier
+                  serverVersion:
+                    type: string
+                    example: '9.3'
+                    description: RNG server version number
+                  serverTime:
+                    type: string
+                    format: date-time
+                    example: '2020-09-30T18:30:23Z'
+                    description: Current system time of the RNG server
+                  rngBusinessDay:
+                    type: integer
+                    description: Business day under which the transaction was recorded. Format is YYMMDD.
+                    minimum: 0
+                    example: 200930
+                  drawResults:
+                    type: array
+                    description: 'Array of results objects, corresponding to array of requests'
+                    items:
+                      type: object
+                      properties:
+                        clientRequestId:
+                          type: string
+                          description: Client's unique identifier for this draw request
+                          pattern: '^[A-Za-z0-9 -]+'
+                          example: RQID-31234545-32
+                        drawStatus:
+                          $ref: '#/components/schemas/Status'
+                        productId:
+                          type: integer
+                          description: Identifier of the product definition drawn
+                          minimum: 0
+                        drawMatrix:
+                          $ref: '#/components/schemas/DrawMatrix'
+                        distribution:
+                          $ref: '#/components/schemas/Distribution'
+                        drawTime:
+                          type: string
+                          format: date-time
+                          description: Timestamp of the draw
+                          example: '2020-09-30T18:30:23Z'
+                        recordId:
+                          type: string
+                          description: Unique record identifier for the draw
+                          example: EX191109870000000125
+                        sets:
+                          type: array
+                          description: Numbers drawn
+                          items:
+                            type: array
+                            items:
+                              type: integer
+                              minimum: 0
+                      required:
+                        - drawStatus
+                required:
+                  - drawResults
+              examples:
+                Minimal Example:
+                  value:
+                    transactionStatus:
+                      code: 0
+                      description: Success
+                    serverId: RNG-TEST-87
+                    serverVersion: '9.3'
+                    serverTime: '2020-09-30T18:30:23Z'
+                    rngBusinessDay: 200930
+                    testMode: false
+                    drawResults:
+                      - drawStatus:
+                          code: 0
+                          description: Success
+                        productId: 1002
+                        drawTime: '2020-09-30T18:30:23Z'
+                        recordId: EX191109870000000125
+                        sets:
+                          - - 9
+                            - 16
+                            - 26
+                            - 29
+                            - 37
+                            - 42
+                Example:
+                  value:
+                    clientTransactionId: TXID-102030450-11
+                    transactionStatus:
+                      code: 0
+                      description: Success
+                    serverId: RNG-TEST-87
+                    serverVersion: '9.3'
+                    rngBusinessDay: 200930
+                    testMode: false
+                    drawResults:
+                      - clientRequestId: RQID-31234545-32
+                        drawStatus:
+                          code: 0
+                          description: Success
+                        productId: 1006
+                        drawTime: '2020-09-30T18:30:23Z'
+                        recordId: EX191109870000000125
+                        sets:
+                          - - 10
+                            - 21
+                            - 29
+                            - 35
+                            - 39
+                          - - 3
+                            - 8
+                            - 17
+                            - 22
+                            - 34
+        '400':
+          description: Bad Request
+          headers: {}
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                Example:
+                  value:
+                    status:
+                      code: 999
+                      description: Input validation failed
+                    fieldErrors:
+                      - code: INVALID_VALUE
+                        message: Product not found
+                        fieldName: productId
+                        path: 'drawRequests[1].productId'
+      description: Create draws for quick pick products
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                clientTransactionId:
+                  type: string
+                  description: Client's unique ID for this transaction
+                  format: int64
+                  example: TXID-102030450-11
+                  pattern: '^[A-Za-z0-9 -]+'
+                clientBusinessDay:
+                  type: integer
+                  description: Client's current business day. Format is YYMMDD.
+                  minimum: 0
+                  example: 200930
+                drawRequests:
+                  type: array
+                  description: One or more draw requests to be processed
+                  items:
+                    type: object
+                    properties:
+                      clientRequestId:
+                        type: string
+                        description: Client's unique identifier for this draw request
+                        pattern: '^[A-Za-z0-9 -]+'
+                        example: RQID-31234545-32
+                      productId:
+                        type: integer
+                        description: 'Identifier of the product definition to be drawn. The product defines all draw parameters, and MAY allow them to be overridden with the parameters below.'
+                        minimum: 0
+                      numberOfSets:
+                        type: integer
+                        description: How many sets of numbers to draw
+                        minimum: 1
+                      drawMatrix:
+                        $ref: '#/components/schemas/DrawMatrix'
+                      distribution:
+                        $ref: '#/components/schemas/Distribution'
+                    required:
+                      - productId
+                      - numberOfSets
+              required:
+                - drawRequests
+            examples:
+              Minimal Example:
+                value:
+                  drawRequests:
+                    - productId: 1002
+                      numberOfSets: 1
+              Example:
+                value:
+                  clientTransactionId: TXID-102030450-11
+                  clientBusinessDay: 200930
+                  testMode: true
+                  drawUsers:
+                    - name: Jane Doe
+                      loginTime: '2020-09-30T15:47:44Z'
+                    - name: John Smith
+                      loginTime: '2020-09-30T15:56:01Z'
+                  drawRequests:
+                    - clientRequestId: RQID-31234545-32
                       clientString: PROMO-1
                       drawHash: 9498A934974997B9723498A93D92498397BC70B
                       productId: 1006
