--- a/reference/s2s-rng-api.v1.0.yaml
+++ b/reference/s2s-rng-api.v1.0.yaml
@@ -483,33 +483,23 @@ paths:
                 value:
                   clientTransactionId: TXID-102030450-11
                   clientBusinessDay: 200930
-                  testMode: true
-                  drawUsers:
-                    - name: Jane Doe
-                      loginTime: '2020-09-30T15:47:44Z'
-                    - name: John Smith
-                      loginTime: '2020-09-30T15:56:01Z'
                   drawRequests:
                     - clientRequestId: RQID-31234545-32
-                      clientString: PROMO-1
-                      drawHash: 9498A934974997B9723498A93D92498397BC70B
-                      productId: 1006
+                      productId: 1002
                       numberOfSets: 2
                       drawMatrix:
                         setSize: 5
                         minValue: 1
                         maxValue: 39
                         withReplacement: true
-                      extractData:
-                        extractType: TYPE1
-                        extractFields:
-                          - '1234'
-                          - ''
-                          - '23485'
-                          - ''
-                          - ''
-                          - 'true'
-                          - '30.00'
+                    - clientRequestId: RQID-31234546-23
+                      productId: 1006
+                      numberOfSets: 1
+                      drawMatrix:
+                        setSize: 5
+                        minValue: 1
+                        maxValue: 39
+                        withReplacement: true
         description: ''
       parameters: []
 components:
