--- a/reference/s2s-rng-api.v1.0.yaml
+++ b/reference/s2s-rng-api.v1.0.yaml
@@ -725,7 +725,7 @@ paths:
       parameters: []
   /server/rng-status:
     get:
-      summary: Your GET endpoint
+      summary: ''
       tags: []
       responses:
         '200':
