--- a/reference/s2s-rng-api.v1.0.yaml
+++ b/reference/s2s-rng-api.v1.0.yaml
@@ -317,7 +317,7 @@ paths:
                   - $ref: '#/components/schemas/BatchResponse'
                   - type: object
                     properties:
-                      drawResults:
+                      results:
                         type: array
                         description: 'Array of results objects, corresponding to the array of requests'
                         items:
@@ -364,7 +364,7 @@ paths:
                     properties:
                       testMode:
                         $ref: '#/components/schemas/TestMode'
-                      drawResults:
+                      results:
                         type: array
                         description: 'Array of results objects, corresponding to the array of requests'
                         items:
@@ -376,8 +376,6 @@ paths:
                                   type: integer
                                 drawMatrix:
                                   $ref: '#/components/schemas/DrawMatrix'
-                              required:
-                                - drawStatus
                       securityBlocks:
                         type: array
                         items:
@@ -440,9 +438,9 @@ paths:
                     properties:
                       testMode:
                         $ref: '#/components/schemas/TestMode'
-                      drawResults:
+                      results:
                         type: array
-                        description: 'Array of results objects, corresponding to the array of requests'
+                        description: 'Array of results records, corresponding to the array of requests'
                         items:
                           allOf:
                             - $ref: '#/components/schemas/DrawResult'
@@ -452,8 +450,6 @@ paths:
                                   type: integer
                                 drawMatrix:
                                   $ref: '#/components/schemas/DrawMatrix'
-                              required:
-                                - drawStatus
                       securityBlocks:
                         type: array
                         items:
