--- a/reference/s2s-rng-api.v1.0.yaml
+++ b/reference/s2s-rng-api.v1.0.yaml
@@ -630,7 +630,8 @@ paths:
   /draws:
     get:
       summary: Verify Draw
-      tags: []
+      tags:
+        - RNG
       responses:
         '200':
           description: OK
